registry-acme-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acme-nginx
spec:
  selector:
    name: acme-nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: acme-nginx
