registry-acme-nginx-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: docker-registry-default-nginx
  # annotations:
  #   kubernetes.io/tls-acme: 'true'
spec:
  host: docker-registry-default.apps.openshift.deustotech.eu
  path: /.well-known/acme-challenge
  to:
    kind: Service
    name: acme-nginx
  port:
    targetPort: 8080
